[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ships/Luminaris/Luminaris0.glb" type="PackedScene" id=1]
[ext_resource path="res://Ships/Luminaris/Luminaris0.gd" type="Script" id=2]
[ext_resource path="res://Ships/SpeedDashes/SpeedDashes.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ships/EngineFlame/engine_flame.material" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.231371, 0.141611, 0.415245 )

[sub_resource type="CylinderMesh" id=2]
material = ExtResource( 4 )
top_radius = 3.074
height = 2.575

[node name="Luminaris0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Luminaris OBJ" parent="." index="0"]
transform = Transform( -0.005, 0, -7.54979e-10, 0, 0.005, 0, 7.54979e-10, 0, -0.005, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]
shape = SubResource( 1 )

[node name="Fire1" type="MeshInstance" parent="." index="2"]
transform = Transform( 0.04, 0, 0, 0, -6.55671e-09, -0.007, 0, 0.15, -3.0598e-10, 0.0325935, 0.00539317, 0.337175 )
mesh = SubResource( 2 )
material/0 = null

[node name="Fire2" type="MeshInstance" parent="." index="3"]
transform = Transform( 0.04, 0, 0, 0, -6.55671e-09, -0.007, 0, 0.15, -3.0598e-10, -0.0367631, 0.00627237, 0.331564 )
mesh = SubResource( 2 )
material/0 = null

[node name="AdvanceDashes" parent="." index="4" instance=ExtResource( 3 )]
transform = Transform( -1.09278e-08, 0, 0.25, 0, 0.25, 0, -0.25, 0, -1.09278e-08, 0, 0, 0.395 )
speed_scale = 2.0
explosiveness = 0.14
randomness = 0.33

[node name="RegressDashes" parent="." index="5" instance=ExtResource( 3 )]
transform = Transform( 1.09278e-08, -9.55343e-16, 0.25, -2.18557e-08, -0.25, 0, 0.25, -2.18557e-08, -1.09278e-08, 0, 0, -0.397371 )
speed_scale = 0.63
explosiveness = 0.1
randomness = 0.08
